--- a/index.Rmd
+++ b/index.Rmd
@@ -24,6 +24,12 @@ require(visNetwork)
 visNetwork(vis.nodes,vis.edges)
 ```
 
+* 2021\. Nichola Raihani and **Eleanor A. Power**. No good deed goes unpunished: the social costs of prosocial behaviour. *Evolutionary Human Sciences*. Accepted.
+
+* 2021\. Marion Dumas, Jessica Barker, and **Eleanor A. Power**. When does reputation lie? Dynamic feedbacks between costly signals, social capital, and social prominence. *Philosophical Transactions of the Royal Society B: Biological Sciences*. Accepted. [Code](https://github.com/eapower/when-does-reputation-lie)
+
+* 2021\. Károly Takáacs, Jörg A. J. Gross, Martina Testori, Srebrenka Letina, Adam R. Kenny, **Eleanor A. Power**, and Rafael P. M. Wittek. Networks of reliable reputation and cooperation: a review. *Philosophical Transactions of the Royal Society B: Biological Sciences*. Accepted.
+
 * 2020\. Martina Contisciani, **Eleanor A. Power**, Caterina De Bacco. [Community Detection with Node Attributes in Multilayer Networks](https://www.nature.com/articles/s41598-020-72626-y). *Scientific Reports*. 10:15736.
 
 * 2020\. John H. Shaver, **Eleanor A. Power**, Benjamin G. Purzycki, Joseph Watts, Rebecca Sear, Mary K. Shenk, Richard Sosis, and Joseph A. Bulbulia. [Church attendance and alloparenting: An analysis of fertility, social support, and child development among English mothers](https://royalsocietypublishing.org/doi/10.1098/rstb.2019.0428). *Philosophical Transactions of the Royal Society B: Biological Sciences*. 375(1805):20190428.
