--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ I do this with a combination of qualitative and quantitative methods, primary am
 
 I am also the co-director of the [ENDOW project](https://endowproject.github.io/), a collaborative network of social scientists undertaking cross-cultural comparative work. Right now, our main focus is a project investigating the dynamics of social networks and wealth inequality in small communities around the world.
 
-I am currently an assistant professor in the [Department of Methodology](https://www.lse.ac.uk/methodology) at the [London School of Economics & Political Science](https://www.lse.ac.uk/). Prior to that, I was an Omidyar Fellow at the [Santa Fe Institute](https://www.santafe.edu/). My PhD is from [Stanford University](https://anthropology.stanford.edu/), MSc from [University College London](https://www.ucl.ac.uk/anthropology/), and BA from [Brown University](https://www.brown.edu/). See more at my [departmental website](http://www.lse.ac.uk/Methodology/People/Academic-Staff/Eleanor-Power/Eleanor-Power).
+I am currently an assistant professor in the [Department of Methodology](https://www.lse.ac.uk/methodology) at the [London School of Economics & Political Science](https://www.lse.ac.uk/). Prior to that, I was an Omidyar Fellow at the [Santa Fe Institute](https://www.santafe.edu/) (and am now a member of the external faculty). My PhD is from [Stanford University](https://anthropology.stanford.edu/), MSc from [University College London](https://www.ucl.ac.uk/anthropology/), and BA from [Brown University](https://www.brown.edu/). See more at my [departmental website](http://www.lse.ac.uk/Methodology/People/Academic-Staff/Eleanor-Power/Eleanor-Power).
 
 ---------------------
 
@@ -28,10 +28,11 @@ Check out the new theme issue of *Philosophical Transactions of the Royal Societ
 ```{r, message = FALSE, echo = FALSE, warning = FALSE}
 vis.nodes <- read.csv("nodes.csv", header = TRUE)
 vis.edges <- read.csv("edges.csv", header = TRUE)
-vis.edges <- subset(vis.edges, vis.edges$from != "EleanorPower")
 require(visNetwork)
 visNetwork(vis.nodes, vis.edges)
 ```
+
+* Accepted\. Cohen R. Simpson and **Eleanor A. Power**. Dynamics of cooperative networks as- sociated with gender among South Indian Tamils. *Philosophical Transactions of the Royal Society B: Biological Sciences.*
 
 * 2022\. Daniel J. Redhead and **Eleanor A. Power**. [Social hierarchies and social networks in humans](https://royalsocietypublishing.org/doi/10.1098/rstb.2020.0440). *Philosophical Transactions of the Royal Society B: Biological Sciences*, 377(1845), 20200440. 
 
